@@ -83,4 +83,62 @@ public class Bar extends Foo {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description><![CDATA[
+One protected constructor, not required to be final
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+class ClassWithOnlyPrivateConstructorsShouldBeFinal {
+    private String string;
+    
+    protected ClassWithOnlyPrivateConstructorsShouldBeFinal(final Object object) {
+        this(object.toString());
+    }
+    
+    private ClassWithOnlyPrivateConstructorsShouldBeFinal(final String string) {
+        super();
+        
+        setString(string);
+    }
+    
+    public final void setString(final String string) {
+        this.string = string;
+    }
+    
+    public String getString() {
+        return string;
+    }
+}
+     ]]></code>
+    </test-code>
+    <test-code>
+        <description><![CDATA[
+One package private constructor, not required to be final
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+class ClassWithOnlyPrivateConstructorsShouldBeFinal {
+    private String string;
+    
+    ClassWithOnlyPrivateConstructorsShouldBeFinal(final Object object) {
+        this(object.toString());
+    }
+    
+    private ClassWithOnlyPrivateConstructorsShouldBeFinal(final String string) {
+        super();
+        
+        setString(string);
+    }
+    
+    public final void setString(final String string) {
+        this.string = string;
+    }
+    
+    public String getString() {
+        return string;
+    }
+}
+     ]]></code>
+    </test-code>
 </test-data>
