@@ -414,6 +414,7 @@ Fixed bug 1943204 - Ant task: <ruleset> path should be relative to Ant basedir
 Fixed patch 2075906 - Add toString() to the rule UnnecessaryWrapperObjectCreation
 Fixed bug 2338341 - ArrayIndexOutOfBoundsException in cpd on rails project
 Fixed bug 2315623 - @SuppressWarnings("PMD.UseSingleton") has no effect
+Fixed bug 2230809 - False +: ClassWithOnlyPrivateConstructorsShouldBeFinal
 ruleset.dtd and ruleset_xml_schema.xsd added to jar file in rulesets directory
 bin and java14/bin scripts:
 	retroweaver version was not correct in java14/bin scripts
